syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/mohamadHarith/baking-ledger/shared/proto/authentication_service_proto";


service AuthService {
  rpc CreateUser(CreateUserRequest) returns (google.protobuf.Empty);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ValidateToken(ValidateRequest) returns (ValidateResponse);
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  string fullName = 3;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  bool valid = 1;
  string userId = 2;
}